Fix Airstrike Font issues

--- a/wp-content/uploads/elementor/css/post-843.css
+++ b/wp-content/uploads/elementor/css/post-843.css
@@ -3,6 +3,6 @@
 	font-style: normal;
 	font-weight: normal;
 	font-display: auto;
-	src: url('/wp-content/uploads/2023/10/AIRSTRIKE_2.ttf') format('truetype');
+	src: url('AIRSTRIKE_2.ttf') format('truetype');
 }
 /* End Custom Fonts CSS */
